--- a/MySampleApp.Infrastructure/MySampleApp.Infrastructure.csproj
+++ b/MySampleApp.Infrastructure/MySampleApp.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ScrapySharp" Version="3.0.0" />
+    <PackageReference Include="OpenQA.Selenium.Chrome.ChromeDriverExtensions" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
